Mid Sem Soln/y.output
Terminals unused in grammar

    LEQ
    GEQ


Grammar

    0 $accept: S $end

    1 S: Assignments S
    2  | ε

    3 Assignments: VAR ASSIGN Expr SC
    4            | error SC

    5 Op: '+'
    6   | '-'
    7   | '/'
    8   | '*'
    9   | '%'

   10 Expr: Expr '+' Expr
   11     | Expr '-' Expr
   12     | Expr '*' Expr
   13     | Expr '/' Expr
   14     | Expr '%' Expr
   15     | Expr Op
   16     | Fact

   17 Fact: VAR INC
   18     | VAR DEC
   19     | INC VAR
   20     | DEC VAR
   21     | VAR C
   22     | Floats C
   23     | Floats INC error
   24     | Floats DEC error
   25     | DEC Floats error
   26     | INC Floats error
   27     | LP Expr RP
   28     | LP Expr error

   29 C: VAR error
   30  | Floats error
   31  | ε


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 9 14
    '*' (42) 8 12
    '+' (43) 5 10
    '-' (45) 6 11
    '/' (47) 7 13
    error (256) 4 23 24 25 26 28 29 30
    VAR <str> (258) 3 17 18 19 20 21 29
    Floats <str> (259) 22 23 24 25 26 30
    ASSIGN <str> (260) 3
    SC <str> (261) 3 4
    LP <str> (262) 27 28
    RP <str> (263) 27
    INC <str> (264) 17 19 23 26
    LEQ <str> (265)
    GEQ <str> (266)
    DEC <str> (267) 18 20 24 25


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    S (19)
        on left: 1 2
        on right: 0 1
    Assignments (20)
        on left: 3 4
        on right: 1
    Op (21)
        on left: 5 6 7 8 9
        on right: 15
    Expr <str> (22)
        on left: 10 11 12 13 14 15 16
        on right: 3 10 11 12 13 14 15 27 28
    Fact <str> (23)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 16
    C (24)
        on left: 29 30 31
        on right: 21 22


State 0

    0 $accept: • S $end

    error  shift, and go to state 1
    VAR    shift, and go to state 2

    $end  reduce using rule 2 (S)

    S            go to state 3
    Assignments  go to state 4


State 1

    4 Assignments: error • SC

    SC  shift, and go to state 5


State 2

    3 Assignments: VAR • ASSIGN Expr SC

    ASSIGN  shift, and go to state 6


State 3

    0 $accept: S • $end

    $end  shift, and go to state 7


State 4

    1 S: Assignments • S

    error  shift, and go to state 1
    VAR    shift, and go to state 2

    $end  reduce using rule 2 (S)

    S            go to state 8
    Assignments  go to state 4


State 5

    4 Assignments: error SC •

    $default  reduce using rule 4 (Assignments)


State 6

    3 Assignments: VAR ASSIGN • Expr SC

    VAR     shift, and go to state 9
    Floats  shift, and go to state 10
    LP      shift, and go to state 11
    INC     shift, and go to state 12
    DEC     shift, and go to state 13

    Expr  go to state 14
    Fact  go to state 15


State 7

    0 $accept: S $end •

    $default  accept


State 8

    1 S: Assignments S •

    $default  reduce using rule 1 (S)


State 9

   17 Fact: VAR • INC
   18     | VAR • DEC
   21     | VAR • C

    VAR     shift, and go to state 16
    Floats  shift, and go to state 17
    INC     shift, and go to state 18
    DEC     shift, and go to state 19

    $default  reduce using rule 31 (C)

    C  go to state 20


State 10

   22 Fact: Floats • C
   23     | Floats • INC error
   24     | Floats • DEC error

    VAR     shift, and go to state 16
    Floats  shift, and go to state 17
    INC     shift, and go to state 21
    DEC     shift, and go to state 22

    $default  reduce using rule 31 (C)

    C  go to state 23


State 11

   27 Fact: LP • Expr RP
   28     | LP • Expr error

    VAR     shift, and go to state 9
    Floats  shift, and go to state 10
    LP      shift, and go to state 11
    INC     shift, and go to state 12
    DEC     shift, and go to state 13

    Expr  go to state 24
    Fact  go to state 15


State 12

   19 Fact: INC • VAR
   26     | INC • Floats error

    VAR     shift, and go to state 25
    Floats  shift, and go to state 26


State 13

   20 Fact: DEC • VAR
   25     | DEC • Floats error

    VAR     shift, and go to state 27
    Floats  shift, and go to state 28


State 14

    3 Assignments: VAR ASSIGN Expr • SC
   10 Expr: Expr • '+' Expr
   11     | Expr • '-' Expr
   12     | Expr • '*' Expr
   13     | Expr • '/' Expr
   14     | Expr • '%' Expr
   15     | Expr • Op

    SC   shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    Op  go to state 35


State 15

   16 Expr: Fact •

    $default  reduce using rule 16 (Expr)


State 16

   29 C: VAR • error

    error  shift, and go to state 36


State 17

   30 C: Floats • error

    error  shift, and go to state 37


State 18

   17 Fact: VAR INC •

    $default  reduce using rule 17 (Fact)


State 19

   18 Fact: VAR DEC •

    $default  reduce using rule 18 (Fact)


State 20

   21 Fact: VAR C •

    $default  reduce using rule 21 (Fact)


State 21

   23 Fact: Floats INC • error

    error  shift, and go to state 38


State 22

   24 Fact: Floats DEC • error

    error  shift, and go to state 39


State 23

   22 Fact: Floats C •

    $default  reduce using rule 22 (Fact)


State 24

   10 Expr: Expr • '+' Expr
   11     | Expr • '-' Expr
   12     | Expr • '*' Expr
   13     | Expr • '/' Expr
   14     | Expr • '%' Expr
   15     | Expr • Op
   27 Fact: LP Expr • RP
   28     | LP Expr • error

    error  shift, and go to state 40
    RP     shift, and go to state 41
    '+'    shift, and go to state 30
    '-'    shift, and go to state 31
    '*'    shift, and go to state 32
    '/'    shift, and go to state 33
    '%'    shift, and go to state 34

    Op  go to state 35


State 25

   19 Fact: INC VAR •

    $default  reduce using rule 19 (Fact)


State 26

   26 Fact: INC Floats • error

    error  shift, and go to state 42


State 27

   20 Fact: DEC VAR •

    $default  reduce using rule 20 (Fact)


State 28

   25 Fact: DEC Floats • error

    error  shift, and go to state 43


State 29

    3 Assignments: VAR ASSIGN Expr SC •

    $default  reduce using rule 3 (Assignments)


State 30

    5 Op: '+' •
   10 Expr: Expr '+' • Expr

    VAR     shift, and go to state 9
    Floats  shift, and go to state 10
    LP      shift, and go to state 11
    INC     shift, and go to state 12
    DEC     shift, and go to state 13

    $default  reduce using rule 5 (Op)

    Expr  go to state 44
    Fact  go to state 15


State 31

    6 Op: '-' •
   11 Expr: Expr '-' • Expr

    VAR     shift, and go to state 9
    Floats  shift, and go to state 10
    LP      shift, and go to state 11
    INC     shift, and go to state 12
    DEC     shift, and go to state 13

    $default  reduce using rule 6 (Op)

    Expr  go to state 45
    Fact  go to state 15


State 32

    8 Op: '*' •
   12 Expr: Expr '*' • Expr

    VAR     shift, and go to state 9
    Floats  shift, and go to state 10
    LP      shift, and go to state 11
    INC     shift, and go to state 12
    DEC     shift, and go to state 13

    $default  reduce using rule 8 (Op)

    Expr  go to state 46
    Fact  go to state 15


State 33

    7 Op: '/' •
   13 Expr: Expr '/' • Expr

    VAR     shift, and go to state 9
    Floats  shift, and go to state 10
    LP      shift, and go to state 11
    INC     shift, and go to state 12
    DEC     shift, and go to state 13

    $default  reduce using rule 7 (Op)

    Expr  go to state 47
    Fact  go to state 15


State 34

    9 Op: '%' •
   14 Expr: Expr '%' • Expr

    VAR     shift, and go to state 9
    Floats  shift, and go to state 10
    LP      shift, and go to state 11
    INC     shift, and go to state 12
    DEC     shift, and go to state 13

    $default  reduce using rule 9 (Op)

    Expr  go to state 48
    Fact  go to state 15


State 35

   15 Expr: Expr Op •

    $default  reduce using rule 15 (Expr)


State 36

   29 C: VAR error •

    $default  reduce using rule 29 (C)


State 37

   30 C: Floats error •

    $default  reduce using rule 30 (C)


State 38

   23 Fact: Floats INC error •

    $default  reduce using rule 23 (Fact)


State 39

   24 Fact: Floats DEC error •

    $default  reduce using rule 24 (Fact)


State 40

   28 Fact: LP Expr error •

    $default  reduce using rule 28 (Fact)


State 41

   27 Fact: LP Expr RP •

    $default  reduce using rule 27 (Fact)


State 42

   26 Fact: INC Floats error •

    $default  reduce using rule 26 (Fact)


State 43

   25 Fact: DEC Floats error •

    $default  reduce using rule 25 (Fact)


State 44

   10 Expr: Expr • '+' Expr
   10     | Expr '+' Expr •
   11     | Expr • '-' Expr
   12     | Expr • '*' Expr
   13     | Expr • '/' Expr
   14     | Expr • '%' Expr
   15     | Expr • Op

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 10 (Expr)

    Op  go to state 35


State 45

   10 Expr: Expr • '+' Expr
   11     | Expr • '-' Expr
   11     | Expr '-' Expr •
   12     | Expr • '*' Expr
   13     | Expr • '/' Expr
   14     | Expr • '%' Expr
   15     | Expr • Op

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 11 (Expr)

    Op  go to state 35


State 46

   10 Expr: Expr • '+' Expr
   11     | Expr • '-' Expr
   12     | Expr • '*' Expr
   12     | Expr '*' Expr •
   13     | Expr • '/' Expr
   14     | Expr • '%' Expr
   15     | Expr • Op

    $default  reduce using rule 12 (Expr)

    Op  go to state 35


State 47

   10 Expr: Expr • '+' Expr
   11     | Expr • '-' Expr
   12     | Expr • '*' Expr
   13     | Expr • '/' Expr
   13     | Expr '/' Expr •
   14     | Expr • '%' Expr
   15     | Expr • Op

    $default  reduce using rule 13 (Expr)

    Op  go to state 35


State 48

   10 Expr: Expr • '+' Expr
   11     | Expr • '-' Expr
   12     | Expr • '*' Expr
   13     | Expr • '/' Expr
   14     | Expr • '%' Expr
   14     | Expr '%' Expr •
   15     | Expr • Op

    $default  reduce using rule 14 (Expr)

    Op  go to state 35
